--- a/style.css
+++ b/style.css
@@ -3,9 +3,13 @@
     margin: 0;
 }
 
-body {
+body, html {
     width: 100vw;
+    max-height: 100vh;
     min-height: 100vh;
+    background-color: rgb(187, 187, 187);
+    display: grid;
+    grid-template-rows: 1fr 3fr;
 }
 
 .book.cards {
@@ -23,5 +27,14 @@ body {
 
 .book.title {
     font-weight: 600;
+}
 
+.button.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    display: none;
 }
