--- a/style.css
+++ b/style.css
@@ -1,40 +1,46 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
-body, html {
-    width: 100vw;
-    max-height: 100vh;
-    min-height: 100vh;
-    background-color: rgb(187, 187, 187);
-    display: grid;
-    grid-template-rows: 1fr 3fr;
+body,
+html {
+  width: 100vw;
+  max-height: 100vh;
+  min-height: 100vh;
+  background-color: rgb(187, 187, 187);
+  display: grid;
+  grid-template-rows: 1fr 3fr;
 }
 
 .book.cards {
-    display: flex;
-    border: 2px solid rebeccapurple;
+  display: flex;
+  border: 2px solid rebeccapurple;
 }
 
 .card {
-    border: 1px solid red;
-    font-size: 1.4rem;
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
+  border: 1px solid red;
+  font-size: 1.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
 
 .book.title {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .button.form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 form {
-    display: none;
+  display: none;
+}
+
+input:invalid {
+  border-color: #900;
+  background-color: #fdd;
 }
